@@ -7,6 +7,7 @@ export(public)
 export(publicFunction)
 export(publicValue)
 exportClasses(Private)
+exportClasses(Show)
 exportClasses(aoos)
 exportMethods("$")
 exportMethods("$<-")
